--- a/thesis-app/src/app/customer/components/customer-navbar/customer-navbar.component.html
+++ b/thesis-app/src/app/customer/components/customer-navbar/customer-navbar.component.html
@@ -2,7 +2,7 @@
   <div class="miniContainer">
     <div class="title">
       <div>
-        <h1>Ding Dong: It's Cut Time</h1>
+        <h1>It's Cut Time</h1>
       </div>
     </div>
 
@@ -11,7 +11,7 @@
         <li class="customer">
           <h4>Welcome {{ currentCustomer }}, where are you located?</h4>
         </li>
-        <li class="">
+        <li class="search">
           <form class="superForm">
             <div>
               <input
@@ -25,7 +25,7 @@
         </li>
 
         <div class="dropdown">
-          <span class="caret">Username</span>
+          <span class="caret"><h4>Username</h4></span>
             <div class="dropdown-content">
               <ul class="dropdownUl">
                 <li [routerLink]="['/home']"><h4>Home</h4></li>
