--- a/thesis-app/src/app/customer/components/customer-navbar/customer-navbar.component.css
+++ b/thesis-app/src/app/customer/components/customer-navbar/customer-navbar.component.css
@@ -7,6 +7,7 @@
   flex-direction: column;
   margin-left: 3em;
   margin-top: 3em;
+  border: 2px solid red;
 }
 
 h1 {
@@ -18,6 +19,7 @@ h1 {
 
 h4 {
   color: #e5e3e3;
+  width: 100%;
 }
 
 .title {
@@ -44,9 +46,10 @@ h4 {
 
 .unorderedList {
   display: flex;
-  justify-content: center;
+  justify-content: left;
   align-items: center;
   list-style: none;
+  width: 100%;
 }
 
 .superForm {
@@ -58,22 +61,21 @@ input {
   background-color: #e5e3e3
 }
 
-.customer {
-  width: 40%;
+.customerContainer {
+  flex: 1 1 30%;
 }
 
 .search {
-  width: 40%;
+  flex: 1 1 40%;
 }
 
-.form-control {
-  width: 40ch;
+.dropdownList {
+  flex: 1 1 15%;
 }
 
 .dropdown {
   position: relative;
   display: absolute;
-  width: 33%;
 }
 
 .dropdown-content {
