--- a/thesis-app/src/app/customer/components/customer-navbar/customer-navbar.component.css
+++ b/thesis-app/src/app/customer/components/customer-navbar/customer-navbar.component.css
@@ -7,7 +7,6 @@
   flex-direction: column;
   margin-left: 3em;
   margin-top: 3em;
-  border: 2px solid red;
 }
 
 h1 {
@@ -36,7 +35,7 @@ h4 {
   width: 100%;
   height: 20%;
   flex: 1 1 100%;
-  border-bottom: 2px solid black;
+  border-bottom: 2px solid #e5e3e3;
   margin-bottom: 2em;
 }
 
