--- a/thesis-app/src/app/customer/components/customer-navbar/customer-navbar.component.css
+++ b/thesis-app/src/app/customer/components/customer-navbar/customer-navbar.component.css
@@ -80,9 +80,9 @@ input {
 .dropdown-content {
   display: none;
   position: absolute;
-  background-color: #f9f9f9;
+  background-color: transparent;
   min-width: 25ch;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  /*box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);*/
   padding: 0ch 3ch 0ch 0ch;
   z-index: 1;
 }
@@ -95,7 +95,7 @@ input {
   list-style-type: none;
   width: 100%;
   height: 100%;
-  box-shadow: 3px 3px 1px rgba(173, 216, 230, 0.9);
+  /*box-shadow: 3px 3px 1px rgba(173, 216, 230, 0.9);*/
   background-color: transparent;
 }
 
