Submit and pass form data on submit

--- a/thesis-app/src/app/customer/components/customer-navbar/customer-navbar.component.html
+++ b/thesis-app/src/app/customer/components/customer-navbar/customer-navbar.component.html
@@ -16,6 +16,7 @@
             <div>
               <input
                 placeholder="Enter your location"
+                typer="search"
                 #streetAddress
                 (ngModelChange)="locationChange.emit(streetAddress)"
               >
