Create data flow and create put request function

--- a/thesis-app/src/app/customer/components/customer-profile/customer-profile.component.html
+++ b/thesis-app/src/app/customer/components/customer-profile/customer-profile.component.html
@@ -18,9 +18,9 @@
       <h4>Email: {{profile.email}}</h4>
         <input type="email" name="email" ngModel id="email" />
       <h4>Phone Number: {{profile.phonenumber}}</h4>
-        <input name="phonenumber" id="phonenumber">
+        <input name="phonenumber" ngModel id="phonenumber">
       <h4>Personal Website: {{profile.site_url}}</h4>
-        <input type="url" name="website">
+        <input type="url" ngModel name="website">
     </form>
   </div>
   <div class="buttonContainer2">
