add styling for customer home

--- a/thesis-app/src/app/customer/components/close-to-you/close-to-you.component.css
+++ b/thesis-app/src/app/customer/components/close-to-you/close-to-you.component.css
@@ -1,10 +1,17 @@
 .poppaDiv {
-  border: 2px solid;
+  /*border: 2px solid;*/
   display: flex;
-  justify-content: center;
-  align-items: center;
+  /*justify-content: left;*/
+  /*align-items: left;*/
+  flex-direction: column;
+  padding: 2rem 5rem;
+  border-bottom: 0.05rem solid black;
 }
 
 .stylistInfo {
-  /*border: 2px solid red;*/
+  margin: 0.5rem 0;
+}
+
+h4 {
+  color: black;
 }
