--- a/thesis-app/src/app/customer/components/close-to-you/close-to-you.component.html
+++ b/thesis-app/src/app/customer/components/close-to-you/close-to-you.component.html
@@ -1,11 +1,12 @@
 <div class="poppaDiv">
-  <h4>
-    <span class="glyphicon glyphicon-scissors">
-      {{stylistInformation.name}}
-      {{stylistInformation.phonenumber}}
-    </span>
-  </h4>
-  <div class="stylistInfo">
-    <h5>{{stylistInformation.site_url}}</h5>
+
+  <!-- <div class="glyphicon glyphicon-scissors"> -->
+  <h4>{{stylistInformation.name}}</h4>
+  <!-- </div> -->
+  <div class="stylistInfo glyphicon glyphicon-earphone">
+    {{stylistInformation.phonenumber}}
+  </div>
+  <div class="stylistInfo glyphicon glyphicon-envelope">
+    {{stylistInformation.site_url}}
   </div>
 </div>
