--- a/thesis-app/src/app/customer/components/customer-navbar/customer-navbar.component.css
+++ b/thesis-app/src/app/customer/components/customer-navbar/customer-navbar.component.css
@@ -5,8 +5,8 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  margin-left: 3em;
-  margin-top: 3em;
+/*  margin-left: 3em;
+  margin-top: 3em;*/
 }
 
 h1 {
