--- a/thesis-app/src/app/customer/components/customer-inbox/customer-inbox.component.css
+++ b/thesis-app/src/app/customer/components/customer-inbox/customer-inbox.component.css
@@ -1,46 +1,58 @@
 .poppaDiv {
-  height: 50%;
-  width: 100%;
+/*  height: 50%;
+  width: 30%;
   overflow: scroll;
   display: flex;
   flex-direction: column;
-  padding: 1em;
+  padding: 1em;*/
 }
 
 h1 {
-  border-bottom: 2px solid;
+  border-bottom: 1px solid black;
+  padding-bottom: 4rem;
 }
 
 h4 {
   margin-right: 2em;
   padding-right: 2em;
-  border-bottom: 2px solid;
+  /*border-bottom: 2px solid;*/
 }
 
 .rowBody {
   display: flex;
-  margin: .5em;
+  flex-direction: row;
 }
-.rowItem {
+/*.rowItem {
   width: 100%;
-}
+}*/
 
 .title {
-  width: 100%;
+  /*width: 100%;*/
   display: flex;
+  /*flex: 1;*/
+  flex-direction: row;
+  align-items: center;
+  padding: 2rem 0;
+  border-bottom: 1px solid black;
 }
 .messageUser {
-  flex: 1 1 90%;
-  align-self: right;
+  /*flex: 1 1 90%;*/
+  /*align-self: right;*/
+  display: flex;
+  flex-direction: column;
+  margin-right: 4rem;
+  /*position: ;*/
 }
 
 .buttonContainer {
-  flex: 1 1 10%;
+/*  flex: 1 1 10%;
   display: flex;
   flex-direction: column;
-  justify-content: flex-end;
-  align-items: flex-end;
-  width: 100%;
+  justify-content: flex-end;*/
+  /*vertical-align: middle;*/
+  /*width: 100%;*/
+  display: flex;
+  /*position: relative;*/
 }
 
 button {
