--- a/thesis-app/src/app/customer/components/customer-message/customer-message.component.css
+++ b/thesis-app/src/app/customer/components/customer-message/customer-message.component.css
@@ -5,8 +5,24 @@
   flex-direction: column;
 }
 
-.inboxContainer {
+.container {
+  width: 80%;
+  display: flex;
+}
+
+.inbox-container {
+  display: flex;
+  flex: 1;
   height: 35%;
-  width: 100%;
+  width: 30%;
   overflow: scroll;
+  padding-right: 4rem;
+  border-right: 1px solid black;
+}
+
+.chat-history-container {
+  display: flex;
+  flex: 3;
+  border-right: 1px solid black;
+  padding: 0 4rem;
 }
