--- a/thesis-app/src/app/customer/components/customer-inbox/customer-inbox.component.html
+++ b/thesis-app/src/app/customer/components/customer-inbox/customer-inbox.component.html
@@ -1,18 +1,15 @@
 <h1>Inbox</h1>
 <div
-  *ngFor="let conversation of messages"
+  *ngFor="let conversation of conversations"
   class="title"
-  (click)="openHistory.emit(conversation.slice().reverse())"
+  (click)="openHistory.emit(conversation.sender_id)"
 >
   <div class="messageUser">
-    <h4>{{conversation[0].recipient}}: </h4>
-    <div>
-      {{ conversation[0].time }}
-    </div>
+    <h4>{{conversation.sender}}: </h4>
   </div>
   <div
     class="buttonContainer glyphicon glyphicon-remove"
-    (click)="deleteChat.emit(conversation)"
+    (click)="deleteChat.emit(conversation.sender_id)"
   >
   </div>
 </div>
