add confirm bookings fetch route

--- a/thesis-app/src/app/customer/components/customer-home/customer-home.component.html
+++ b/thesis-app/src/app/customer/components/customer-home/customer-home.component.html
@@ -31,6 +31,6 @@
 
 <div class="booking-due" *ngIf="!!bookingsDue">
   <div *ngFor="let booking of bookingsDue">
-    I OWE {{booking.name}} MONEY!!!!
+    <payment-input [stylistName]="booking.name"></payment-input>
   </div>
 </div>
