--- a/thesis-app/src/app/customer/components/customer-navbar/customer-navbar.component.css
+++ b/thesis-app/src/app/customer/components/customer-navbar/customer-navbar.component.css
@@ -10,14 +10,14 @@
 }
 
 h1 {
-  color: #e5e3e3;
+  text-shadow: 3px 3px 1px rgba(173, 216, 230, 0.9);
   width: 100%;
   flex: 1 1;
   align-self: center;
 }
 
 h4 {
-  color: #e5e3e3;
+  color: black;
   width: 100%;
 }
 
@@ -35,12 +35,13 @@ h4 {
   width: 100%;
   height: 20%;
   flex: 1 1 100%;
-  border-bottom: 2px solid #e5e3e3;
+  border-bottom: 2px solid black;
   margin-bottom: 2em;
 }
 
 .superNav {
   width: 100%;
+    box-shadow: 5px 5px 3px rgba(173, 216, 230, 0.9);
 }
 
 .unorderedList {
@@ -57,7 +58,7 @@ h4 {
 
 input {
   width: 20em;
-  background-color: #e5e3e3
+  background-color: #d3d3d3;
 }
 
 .customerContainer {
@@ -80,9 +81,9 @@ input {
 .dropdown-content {
   display: none;
   position: absolute;
-  background-color: transparent;
+  background-color: #ffffff;
   min-width: 25ch;
-  /*box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);*/
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   padding: 0ch 3ch 0ch 0ch;
   z-index: 1;
 }
@@ -95,8 +96,8 @@ input {
   list-style-type: none;
   width: 100%;
   height: 100%;
-  /*box-shadow: 3px 3px 1px rgba(173, 216, 230, 0.9);*/
-  background-color: transparent;
+  box-shadow: 3px 3px 1px rgba(173, 216, 230, 0.9);
+  background-color: #ffffff;
 }
 
 .dropdownUl *:hover {
