--- a/thesis-app/src/app/customer/components/customer-profile/customer-profile.component.css
+++ b/thesis-app/src/app/customer/components/customer-profile/customer-profile.component.css
@@ -3,7 +3,7 @@ h1 {
 }
 
 .poppaDiv {
-  border: 2px solid red;
+  border: 2px solid black;
   display: flex;
   width: 100%;
   height: 100%;
@@ -46,7 +46,7 @@ img {
   flex: 1 1 9%;
   padding: 1em;
   margin: 1em;
-  border-left: 2px solid;
+  border-left: 2px solid black;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
