--- a/thesis-app/src/app/registration/components/signin-form/signin-form.component.css
+++ b/thesis-app/src/app/registration/components/signin-form/signin-form.component.css
@@ -1,7 +1,9 @@
 .poppaDiv {
   border-top: 2px solid black;
   width: 100%;
-  height: 70vh;
+  height: 75%;
+  padding: 2em;
+  margin: 2em;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -17,7 +19,7 @@ input {
 }
 
 .myForm {
-  width: 50%;
+  width: 100%;
   height: 50%;
   display: flex;
   flex-direction: column;
