--- a/thesis-app/src/app/registration/components/signin-form/signin-form.component.html
+++ b/thesis-app/src/app/registration/components/signin-form/signin-form.component.html
@@ -1,5 +1,5 @@
 <registration-header headerText="Login Page" logo="insert logo url here"></registration-header>
-<div class="container row poppaDiv">
+<div class="poppaDiv">
   <!-- <div class="container row"> -->
     <form class="myForm" (ngSubmit)="handleLogin(f)" #f="ngForm">
       <label><h1>Login</h1></label>
@@ -34,7 +34,7 @@
     </form>
 <!--   </div> -->
 
-  <div class="container row panel panel-default woo">
+  <div class="woo">
     <p class="panel-body">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
   </div>
 </div>
