--- a/thesis-app/src/app/registration/components/signin-form/signin-form.component.css
+++ b/thesis-app/src/app/registration/components/signin-form/signin-form.component.css
@@ -2,10 +2,8 @@
   border-top: 2px solid black;
   width: 100%;
   height: 75%;
-  padding: 2em;
-  margin: 2em;
   display: flex;
-  justify-content: center;
+  justify-content: left;
   align-items: center;
   flex-direction: column;
 }
