Pass stateservice obj into navbar component

--- a/thesis-app/src/app/customer/components/customer-navbar/customer-navbar.component.html
+++ b/thesis-app/src/app/customer/components/customer-navbar/customer-navbar.component.html
@@ -9,7 +9,7 @@
     <nav class="superNav">
       <ul class="unorderedList">
         <li class="customerContainer">
-          <h4>Welcome {{ currentCustomer }}, where are you located?</h4>
+          <h4>Welcome {{currentCustomer.name}}, where are you located?</h4>
         </li>
         <li class="search">
           <form class="superForm">
