--- a/thesis-app/src/app/customer/components/customer-profile/customer-profile.component.html
+++ b/thesis-app/src/app/customer/components/customer-profile/customer-profile.component.html
@@ -4,7 +4,7 @@
     <img [src]="profile.image_url" />
     <div class="billingAddressContainer">
       <h4>Billing Address:</h4>
-      <h4>{{profile.billingaddress}}</h4>
+      <h4 class="profAddress">{{profile.billingaddress}}</h4>
       <button>Edit</button>
     </div>
   </div>
