--- a/thesis-app/src/app/customer/components/customer-home/customer-home.component.css
+++ b/thesis-app/src/app/customer/components/customer-home/customer-home.component.css
@@ -65,17 +65,26 @@
   width: 100%;
 }*/
 
-.blurb {
-  position: absolute;
-  right: 55em;
-  bottom: 10em;
-  color: black;
-  font-style: italic;
-  font-size: 10px;
-}
-
 .booking-due {
   position: absolute;
-  top: 3em;
-  left: 1em;
+  top: 2em;
+  right: 5em;
+}
+
+.booking-confirmed {
+  position: absolute;
+  top: 0;
+  right: 12em;
+  margin-top: 3rem;
+  margin-right: 3rem;
+}
+
+.confirmed {
+  height: 3rem;
+  border-radius: 5px;
+  background-color: #ED6A5A;
+  text-align: center;
+  color: #F4F1BB;
+  width: 18rem;
+  height: 2rem;
 }
