--- a/thesis-app/src/app/stylist/components/stylist-home/stylist-home.component.html
+++ b/thesis-app/src/app/stylist/components/stylist-home/stylist-home.component.html
@@ -1,11 +1,12 @@
-<h2>Hello world</h2>
 <customer-navbar></customer-navbar>
-Bookings:
-<div *ngFor="let booking of bookings; let i = index;">
-  <booking
-    [bookingInformation]="booking"
-    (confirmBooking)="confirmBooking($event, i)"
-    (deleteBooking)="deleteBooking($event, i)"
-    (completeBooking)="completeBooking($event, i)"
-  ></booking>
+<div class="wrapper">
+  <div class="booking-container" *ngFor="let booking of bookings; let i = index;">
+    <booking
+      [bookingInformation]="booking"
+      (confirmBooking)="confirmBooking($event, i)"
+      (deleteBooking)="deleteBooking($event, i)"
+      (completeBooking)="completeBooking($event, i)"
+    ></booking>
+  </div>
+  <div class="map-container">MAP</div>
 </div>
