--- a/thesis-app/src/app/stylist/components/booking/booking.component.html
+++ b/thesis-app/src/app/stylist/components/booking/booking.component.html
@@ -1,9 +1,13 @@
 <div class="is-confirmed" *ngIf="bookingInformation.isconfirmed===1">
-  <h4>{{bookingInformation.customer}}</h4> at time: {{bookingInformation.time}} at location: {{bookingInformation.location}}
+  <h4>{{bookingInformation.customer}}</h4>
+  <span class="glyphicon glyphicon-time">{{bookingInformation.time}}</span>
+  <span class="glyphicon glyphicon-home">{{bookingInformation.location}}</span>
   <button (click)="completeBooking.emit(bookingInformation.id)">Request Payment</button>
 </div>
 <div class="not-confirmed" *ngIf="bookingInformation.isconfirmed===0">
-  <h4>{{bookingInformation.customer}}</h4> at time: {{bookingInformation.time}} at location: {{bookingInformation.location}}
+  <h4>{{bookingInformation.customer}}</h4>
+  <span class="glyphicon glyphicon-time">{{bookingInformation.time}}</span>
+  <span class="glyphicon glyphicon-home">{{bookingInformation.location}}</span>
   <button (click)="confirmBooking.emit(bookingInformation.id)">Confirm this booking</button>
   <button (click)="deleteBooking.emit(bookingInformation.id)">Delete this booking</button>
 </div>
