--- a/thesis-app/src/app/stylist/components/stylist-home/stylist-home.component.css
+++ b/thesis-app/src/app/stylist/components/stylist-home/stylist-home.component.css
@@ -1,16 +1,12 @@
 .wrapper {
-  position: relative;
-  height: 100%;
-  width: 100%;
-  display: flex;
-  flex-direction: column;
+  width: 80%;
 }
 
 .booking-container {
-  flex: 1
+  display: inline-block;
 
 }
 
 .map-container {
-  flex: 1;
+  display: inline-block;
 }
