Modify nav dropdown

--- a/thesis-app/src/app/customer/components/customer-navbar/customer-navbar.component.html
+++ b/thesis-app/src/app/customer/components/customer-navbar/customer-navbar.component.html
@@ -28,7 +28,7 @@
         </li>
         <li class="dropdownList">
           <div class="dropdown">
-            <span class="caret"><h4>Username</h4></span>
+            <span class="caret"><p>{{currentCustomer.name}}</p></span>
             <div class="dropdown-content">
               <ul class="dropdownUl">
                 <li
