--- a/thesis-app/src/app/customer/components/customer-navbar/customer-navbar.component.css
+++ b/thesis-app/src/app/customer/components/customer-navbar/customer-navbar.component.css
@@ -83,20 +83,28 @@ input {
   position: absolute;
   background-color: #ffffff;
   min-width: 25ch;
+  width: 100%;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   padding: 0ch 3ch 0ch 0ch;
   z-index: 1;
+  border: 1px solid black;
+}
+
+p {
+  font-weight: bold;
+  font-size: 1.2em;
 }
 
 .dropdown:hover .dropdown-content {
   display: block;
+  font-weight: bold;
+  background-color: #ffffff;
 }
 
 .dropdownUl * {
   list-style-type: none;
   width: 100%;
   height: 100%;
-  box-shadow: 3px 3px 1px rgba(173, 216, 230, 0.9);
   background-color: #ffffff;
 }
 
