Post messages directly to message db

--- a/thesis-app/src/app/customer/components/stylist-profile/stylist-profile.component.html
+++ b/thesis-app/src/app/customer/components/stylist-profile/stylist-profile.component.html
@@ -43,7 +43,9 @@
 
 <div class="container row modalWrapper" [style.display]="getStyle()">
   <div class="bigWrapper">
-    <form #directMessage="ngForm" class="container row modalContent">
+    <form
+      (ngSubmit)="submitMessage(f)" #f="ngForm"
+        class="container row modalContent">
       <span (click)="toggleModal()">&times;</span>
       <div class="container row miniWrapper">
         <h4>Send a message</h4>
@@ -62,7 +64,7 @@
         </div>
         <div class="row message modeitem">
           <textarea name="body" ngModel>Body of the message</textarea>
-          <button (click)="submitMessage(directMessage.value)">Send</button>
+          <button class="btn btn-primary" type="submit">Send</button>
         </div>
       </div>
     </form>
