--- a/thesis-app/src/app/customer/components/customer-home/customer-home.component.html
+++ b/thesis-app/src/app/customer/components/customer-home/customer-home.component.html
@@ -32,7 +32,9 @@
 </div>
 
 <div *ngIf="!!bookingsConfirmed">
-  <div *ngFor="let confirmed of bookingsConfirmed" class="booking-confirmed">
-    <div class="confirmed">{{confirmed.name}} confirmed</div>
+  <div
+    *ngFor="let confirmed of bookingsConfirmed; let i = index"
+    class="booking-confirmed">
+    <div (click)="removeConfirmedBooking(confirmed.id, i)"class="confirmed">{{confirmed.name}} confirmed</div>
   </div>
 </div>
