--- a/thesis-app/src/app/customer/components/stylist-profile/stylist.profile.component.css
+++ b/thesis-app/src/app/customer/components/stylist-profile/stylist.profile.component.css
@@ -26,7 +26,9 @@
 
 .profileImage {
   border-radius: 150px;
-  padding-top: 5ch;
+  padding-top: 1ch;
+  width: 100%;
+  height: 100%;
 }
 
 .locationWrapper {
@@ -34,6 +36,8 @@
   width: 30%;
   padding: 1em;
   height: 100%;
+  flex-direction: column;
+  justify-content: flex-start;
 }
 .servicesContainer {
   flex: 1 1 50%;
