Render user profile image to the user profile component

--- a/thesis-app/src/app/customer/components/customer-profile/customer-profile.component.css
+++ b/thesis-app/src/app/customer/components/customer-profile/customer-profile.component.css
@@ -15,9 +15,9 @@ h1 {
   flex-direction: column;
 }
 
-img {
-  height: 55%;
-  border: 2px solid black;
+.imgContainer {
+  height: 50%;
+  width: 50%;
   margin: 1em;
   border-radius: 50px;
 }
