--- a/thesis-app/src/app/customer/components/customer-profile/customer-profile.component.html
+++ b/thesis-app/src/app/customer/components/customer-profile/customer-profile.component.html
@@ -1,7 +1,9 @@
 <customer-navbar [customerId]="customerId"></customer-navbar>
 <div class="poppaDiv">
   <div class="profileContainer">
-    <img [src]="profile.image_url" />
+    <div class="imgContainer">
+      <img [src]="profile.image_url" />
+    </div>
     <div class="billingAddressContainer">
       <h4>Billing Address:</h4>
       <h4 class="profAddress">{{profile.billingaddress}}</h4>
