Add second image prop to allow for passing of img data

--- a/thesis-app/src/app/customer/components/customer-profile/customer-profile.component.html
+++ b/thesis-app/src/app/customer/components/customer-profile/customer-profile.component.html
@@ -1,7 +1,7 @@
 <customer-navbar [customerId]="customerId"></customer-navbar>
 <div class="poppaDiv">
   <div class="profileContainer">
-    <img class="profileImg" [src]="profile.image_url" />
+    <img class="profileImg" [src]="profile.url" />
     <div class="billingAddressContainer">
       <h4>Billing Address:</h4>
       <h4 class="profAddress">{{profile.billingaddress}}</h4>
