Correctly update url when entered into input box

--- a/thesis-app/src/app/customer/components/customer-profile/customer-profile.component.html
+++ b/thesis-app/src/app/customer/components/customer-profile/customer-profile.component.html
@@ -36,7 +36,7 @@
         <h4>Phone Number: {{profile.phonenumber}}</h4>
           <input name="phonenumber" ngModel id="phonenumber">
         <h4>Personal Website: {{profile.site_url}}</h4>
-          <input type="url" ngModel name="website">
+          <input type="url" ngModel name="site_url">
         <h4>Billing Address: {{profile.billingaddress}}</h4>
           <input type="text" ngModel name="billingaddress">
         <div>
