add handler on customer home to listen for payment processing event

--- a/thesis-app/src/app/customer/components/customer-home/customer-home.component.html
+++ b/thesis-app/src/app/customer/components/customer-home/customer-home.component.html
@@ -27,7 +27,11 @@
 
 <div class="booking-due" *ngIf="!!bookingsDue">
   <div *ngFor="let booking of bookingsDue">
-    <payment-input [stylistName]="booking.name"></payment-input>
+    <payment-input
+      (handleProcessedPayment)="completeBooking($event)"
+      [stylistName]="booking.name"
+    >
+    </payment-input>
   </div>
 </div>
 
